--- a/booking.html
+++ b/booking.html
@@ -141,8 +141,13 @@ https://templatemo.com/tm-566-medic-care
                                         </div>
 
                                         <div class="col-12">
-                                            <label for="message" class="required-field">When are you available Monday-Friday 8 AM - 12 PM for an appointment?</label>
-                                            <textarea class="form-control" rows="5" id="message" name="availability" placeholder="I am available on..." required></textarea>
+                                            <label for="availability" class="required-field">When are you available Monday-Friday 8 AM - 12 PM for an appointment?</label>
+                                            <input type="text"  class="form-control" id="availability" name="availability" placeholder="I am available on..." required>
+                                        </div>
+
+                                        <div class="col-12">
+                                            <label for="visit_reason" class="required-field">Reason for Visit?</label>
+                                            <input type="text"  class="form-control" id="visit_reason" name="visit_reason" placeholder="I am scheduling because..." required>
                                         </div>
                                         
                                         <input type="hidden" name="_subject" value="New Appointment Request from AzizObgyn.com!">
@@ -152,7 +157,6 @@ https://templatemo.com/tm-566-medic-care
                                         <input type="hidden" name="_next" value="https://azizobgyn.com/thankyou.html">
                                         
                                         <input type="hidden" name="_captcha" value="false">
-
 
                                         <div class="col-sm-offset-2 col-12">
                                             <div class="g-recaptcha" data-sitekey="6LdRfRUnAAAAALzy_RHc2eiLtIN64CaW2kbXEu8c"></div>
