--- a/booking.html
+++ b/booking.html
@@ -101,53 +101,53 @@ https://templatemo.com/tm-566-medic-care
                                     <div class="row">
                                         <div class="col-lg-6 col-12">
                                             <label for="fname" class="required-field">First Name:</label>
-                                            <input type="text" name="first Name" id="fname" class="form-control" placeholder="First name" required>
+                                            <input type="text" name="First Name" id="fname" class="form-control" placeholder="First name" required>
                                         </div>
 
                                         <div class="col-lg-6 col-12">
                                             <label for="lname" class="required-field">Last Name:</label>
-                                            <input type="text" name="last Name" id="lname" class="form-control" placeholder="Last name" required>
+                                            <input type="text" name="Last Name" id="lname" class="form-control" placeholder="Last name" required>
                                         </div>
                                         
                                         <label>Birthday:</label>
                                         <div class="col-lg-2 col-12">
                                                 <label for="month" class="required-field">Month:</label>
-                                                <input type="number" name="birthday Month" id="month" min="01" max="12" step="1" value="" class="form-control" placeholder="MM" required>
+                                                <input type="number" name="Birthday Month" id="month" min="01" max="12" step="1" value="" class="form-control" placeholder="MM" required>
                                         </div>
                                         <div class="col-lg-2 col-12">
                                             <label for="day" class="required-field">Day:</label>
-                                            <input type="number" name="birthday Day" id="day" value="" min="01" max="31" step="1" class="form-control" placeholder="DD" required>
+                                            <input type="number" name="Birthday Day" id="day" value="" min="01" max="31" step="1" class="form-control" placeholder="DD" required>
                                         </div>
 
                                         <div class="col-lg-2 col-12">
                                             <label for="year" class="required-field" class="required-field">Year:</label>
-                                            <input type="number" name="birthday Year" id="year" value="" min="1900" max="2099" step="1" class="form-control" placeholder="YYYY" required>
+                                            <input type="number" name="Birthday Year" id="year" value="" min="1900" max="2099" step="1" class="form-control" placeholder="YYYY" required>
                                         </div>
 
                                         <div class="col-lg-6 col-12">
                                             <label for="phone" class="required-field">Cell Phone Number (123-456-7890):</label>
-                                            <input type="telephone" name="phone" id="phone" class="form-control" placeholder="123-456-7890" required>
+                                            <input type="telephone" name="Phone" id="phone" class="form-control" placeholder="123-456-7890" required>
                                             <!-- <input type="telephone" name="Phone" id="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" placeholder="123-456-7890" required> -->
                                         </div>
 
                                         <div class="col-lg-6 col-12">
                                             <label for="email" class="required-field">Email:</label>
-                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
+                                            <input type="email" name="Email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
                                         </div>
 
                                         <div class="col-lg-6 col-12">
                                             <label for="insurance" class="required-field">Insurance:</label>
-                                            <input type="text" name="insurance" id="insurance" class="form-control" placeholder="Insurance Name" required>
+                                            <input type="text" name="Insurance" id="insurance" class="form-control" placeholder="Insurance Name" required>
                                         </div>
 
                                         <div class="col-12">
                                             <label for="availability" class="required-field">When are you available Monday-Friday 8 AM - 12 PM for an appointment?</label>
-                                            <input type="text"  class="form-control" id="availability" name="availability" placeholder="I am available on..." required>
+                                            <input type="text"  class="form-control" id="availability" name="Availability" placeholder="I am available on..." required>
                                         </div>
 
                                         <div class="col-12">
                                             <label for="visit_reason" class="required-field">Reason for Visit?</label>
-                                            <input type="text"  class="form-control" id="visit_reason" name="visit_reason" placeholder="I am scheduling because..." required>
+                                            <input type="text"  class="form-control" id="visit_reason" name="Visit Reason" placeholder="I am scheduling because..." required>
                                         </div>
                                         
                                         <input type="hidden" name="_subject" value="New Appointment Request from AzizObgyn.com!">
