--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ https://templatemo.com/tm-566-medic-care
 
                             <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-twitter"></a></li>
 
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-instagram"></a></li>
+                            <li><a href="https://www.instagram.com/azizobgyn" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-instagram"></a></li>
 
                             <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-youtube"></a></li>
                         </ul>
