--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ https://templatemo.com/tm-566-medic-care
                     <div class="row">
 
                         <div class="col-lg-6 col-md-6 col-12">
-                            <img src="images/home/aziz-obgyn-group2.jpg" class="profile-image" alt="Aziz ObGyn Group Picture" length="800" width="600">
+                            <img src="images/home/aziz-obgyn-group-2025.jpg" class="profile-image" alt="Aziz ObGyn Group Picture" length="800" width="600">
                         </div>
 
                         <div class="col-lg-5 col-md-5 col-12 mx-auto">
@@ -455,11 +455,11 @@ https://templatemo.com/tm-566-medic-care
                         <ul class="social-icon">
                             <li><a href="https://www.facebook.com/AzizObgyn/" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-facebook"></a></li>
 
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-twitter"></a></li>
+                            <!-- <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-twitter"></a></li> -->
 
                             <li><a href="https://www.instagram.com/azizobgyn" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-instagram"></a></li>
 
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-youtube"></a></li>
+                            <!-- <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-youtube"></a></li> -->
                         </ul>
 
                         <div> 
