--- a/services.html
+++ b/services.html
@@ -201,11 +201,11 @@ https://templatemo.com/tm-566-medic-care
                         <ul class="social-icon">
                             <li><a href="https://www.facebook.com/AzizObgyn/" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-facebook"></a></li>
 
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-twitter"></a></li>
+                            <!-- <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-twitter"></a></li> -->
 
                             <li><a href="https://www.instagram.com/azizobgyn" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-instagram"></a></li>
 
-                            <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-youtube"></a></li>
+                            <!-- <li><a href="#" target="_blank" rel="noopener noreferrer" class="social-icon-link bi-youtube"></a></li> -->
                         </ul>
 
                         <div> 
